# glaciers

./: .gitignore  Cargo.toml  FUNDING.json  README.md  glaciers_config.toml  glaciers_config_edit_example.toml  pyproject.toml  test_e2e.py
.github/workflows/: publish_python.yaml
ABIs/: ethereum__abis.parquet  ethereum__abis_topic0.parquet
ABIs/abi_database/: 0x1825242411792536469Cbb5843fd27Ce3e9e583A.json  0xE672E0E0101A7F58d728751E2a5e6Da5Ff1FDa64.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: abi_reader.rs  decoder.rs  lib.rs  main.rs
crates/glaciers/: Cargo.toml  crates_readme.md
crates/glaciers/src/: abi_reader.rs  configger.rs  decoder.rs  lib.rs  log_decoder.rs  matcher.rs  miscellaneous.rs  trace_decoder.rs  utils.rs
crates/python/: Cargo.toml  README.md  e2e_example.py  pyproject.toml  test_e2e.py
crates/python/python/glaciers/: __init__.py  _abi_reader.py  _dataframe_utils.py  _decode_df.py  _decode_df_using_single_contract.py  _decode_df_with_abi_df.py  _decode_file.py  _decode_folder.py  _decode_log_df.py  _decode_log_df_using_single_contract.py  _decode_log_df_with_abi_df.py  _decode_log_file.py  _decode_log_files.py  _decode_log_folder.py  _polars_decode_logs.py  _unnest.py  unnest.py
crates/python/rust_src/: lib.rs
crates/python/src/: lib.rs
crates/python/tests/: test_abi_reader.py  test_config.py  test_decode.py  test_decode_df.py  test_unnest.py
data/logs/: ethereum__logs__blocks__18426253_to_18426303_example.parquet
data/traces/: ethereum__traces__blocks__21_000_000_to_21_000_010.parquet
docs/: decoding_key_concepts.md  installation.md  repo_structure.md  roadmap.md
glacier_analytics_example/: example_glaciers_config.toml  glacier_analytics_example.ipynb  pyproject.toml
glacier_analytics_example/data/: UniswapV2PairABI.parquet  coingecko__eth_price.parquet
src/: abi_reader.rs  decoder.rs  lib.rs  main.rs
