[workspace]
members = ["crates/decoder",]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/yulesa/glaciers"
repository = "https://github.com/yulesa/glaciers"
exclude = [".github/"]

[workspace.dependencies]
glaciers_decoder = { version = "0.1.1", path = "./crates/decoder" }
alloy = { version = "0.2.0", features = ["json-abi", "dyn-abi"] }
serde_json = "1.0.128"
serde = { version = "1.0.215", features = ["derive"] }
polars = { version = "0.41.0", features = ["lazy", "parquet", "dtype-struct", "strings", "semi_anti_join"]}
thiserror = "1.0.50"
chrono = "0.4.38"
sysinfo = "0.33.0"
tokio = { version = "1.42.0", features = ["full"] }
