[workspace]
members = ["crates/decoder", "crates/python"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021 but not virtual workspaces.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/yulesa/glaciers"
repository = "https://github.com/yulesa/glaciers"
description = "Glaciers is a rust an python tool to decode raw EVM logs into decoded events."
exclude = [".github/"]

[workspace.dependencies]
glaciers_decoder = { version = "1.0.0", path = "./crates/decoder" }
alloy = { version = "0.2.0", features = ["json-abi", "dyn-abi"] }
serde_json = "1.0.128"
serde = { version = "1.0.215", features = ["derive"] }
polars = { version = "0.36.2", features = ["lazy", "parquet", "dtype-struct", "strings", "semi_anti_join", "binary_encoding"]}
thiserror = "1.0.50"
chrono = "0.4.38"
sysinfo = "0.33.0"
tokio = { version = "1.42.0", features = ["full"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-polars = "0.10.0"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
