[workspace]
members = ["crates/cli", "crates/glaciers", "crates/python"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021 but not virtual workspaces.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "2.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/yulesa/glaciers"
repository = "https://github.com/yulesa/glaciers"
description = "Glaciers is a rust and python tool to decode raw EVM logs and traces into decoded events."
exclude = [".github/"]

[workspace.dependencies]
glaciers = { version = "2.0.1", path = "./crates/glaciers" }
glaciers_cli = { version = "2.0.1", path = "./crates/cli" }
glaciers_python = { version = "2.0.1", path = "./crates/python" }
alloy = { version = "0.11.0", features = ["json-abi", "dyn-abi"] }
serde_json = "1.0.128"
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
toml = "0.8.19"
polars = { version = "0.38.3", features = ["lazy", "parquet", "dtype-struct", "strings", "semi_anti_join", "binary_encoding", "concat_str"]}
thiserror = "1.0.50"
clap = { version = "4.5.27", features = ["derive"] }
chrono = "0.4.38"
sysinfo = "0.33.0"
tokio = { version = "1.42.0", features = ["full"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-polars = "0.12.0"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }