[package]
name = "glaciers_cli"
description = "Glaciers Cli is a rust tool to decode raw EVM logs/traces into decoded events."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "glaciers_cli"
path = "src/main.rs"

[dependencies]
glaciers = { workspace = true }
alloy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
polars = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
