[package]
name = "glaciers_decoder"
description = "Glaciers Decoder is a rust tool to decode raw EVM logs into decoded events."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "glaciers_decoder"
path = "src/lib.rs"

[[bin]]
name = "glaciers"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
polars = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
