[package]
name = "glaciers"
description = "Glaciers is a rust tool to decode raw EVM logs into decoded events."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "glaciers"
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
polars = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
pyo3 = { workspace = true }
