[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "glaciers"
version = "0.1.0"
description = "Glaciers is a rust python bindings to decode raw EVM logs into decoded events."
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"

dependencies = [
    "cryo>=0.3.2",
    "maturin>=1.7.8",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    ]
