[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "glaciers"
version = "2.0.0"
description = "Glaciers is a rust python bindings to decode raw EVM logs/traces into decoded events."
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"

dependencies = [
    "maturin>=1.7.8",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "toml>=0.10.0",
    "pandas>=2.1.1",
    ]

[tool.maturin]
python-source = "python"
module-name = "glaciers._glaciers_python"
features = ["pyo3/extension-module"]